<resources>
    <string name="app_name">The Movie App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lbl_detalhes">Detalhes</string>
    <string name="search_title">pesquisar</string>
    <string name="search_hint">Pesquise por um filme</string>
    <string name="menu_latest">Main recentes</string>
    <string name="menu_top_rated">Populares</string>
    <string name="menu_now_playing">Em cartaz</string>
    <string name="menu_upcoming">Próximos lançamentos</string>
    <string name="username">Gustavo Santorio</string>
</resources>
